--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ p {
 
 .hero{
     width: 100%;
-    height: 80vh;
+    height: 90vh;
 
     display: flex;
     align-items: center;
@@ -316,11 +316,26 @@ p {
     padding: 0 20px;
 }
 
+.arrow{
+    position: absolute;
+    box-sizing: border-box;
+    bottom: 30px;
+    transition: all 0.3s ease-in;
+    cursor: pointer;
+}
+
+.arrow:hover{
+
+    bottom: 20px;
+    font-size: 20px;
+
+}
+
+/* HERO MOBILE */
 @media only screen and (max-width:710px) {
     
     .hero{
         flex-direction: column;
-        height: 90vh;
     }
 
     .hero-image{
@@ -339,5 +354,53 @@ p {
         margin-top: -5%;
 
     }
+    .arrow{
+        display: none;
+    }
 
+}
+
+/* INTRO 
+.intro {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
+    height: 100vh;
+    padding: 50px;
+}
+
+.intro-image { 
+    grid-area: 1 / 1 / 2 / 2; 
+    max-width: 50vw;
+    max-height: 100vh;
+    display: flex;
+    align-items: flex-end;
+}
+
+.intro-image img {
+    max-width: 90%;
+    max-height: auto;
+}
+
+.intro-text { 
+    grid-area: 1 / 2 / 2 / 3; 
+    max-width: 50vw;
+    max-height: 100vh;
+    opacity: 1;
+    transition: all 2s;
+}
+
+.intro-text h3 {    
+    text-align: right;
+}
+*/
+
+.intro {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    background-color: aqua;
 }
