--- a/style.css
+++ b/style.css
@@ -196,11 +196,7 @@ p {
 
 /* MENU DI NAVIGAZIONE MOBILE */
 
-@media only screen and (max-width: 560px) {
-
-    *{
-        overflow: hidden;
-    }
+@media only screen and (max-width: 710px) {
 
     .burger, .menu {
         display: none;
@@ -210,7 +206,9 @@ p {
         position: fixed;
         bottom: 0;
         z-index: 2;
-        height: 8vh;
+        height: 10vh;
+        padding: 20px;
+        background-color: #9B7EDE;
     }
 
 
@@ -336,11 +334,12 @@ p {
     
     .hero{
         flex-direction: column;
+        height: 100vh;
     }
 
     .hero-image{
         width: 100%;
-        height: 50%;
+        height: 40vh;
     }
 
     .hero-image img{
@@ -348,8 +347,10 @@ p {
     }
 
     .hero-text{
+
+        justify-content: flex-start;
         width: 100%;
-        height: 50%;
+        height: 60vh;
         text-align: center;
         margin-top: -5%;
 
@@ -370,23 +371,47 @@ p {
 }
 
 .intro-text{
-
     width: 50%;
     height: 100%;
     text-align: right;
-
 }
 
 
 .intro-image{
-
     display: flex;
     align-items: flex-end;
     width: 50%;
     height: 100%;
-
 }
 
 .intro-image img{
     width: 80%;
+}
+
+/* INTRO MOBILE */
+
+@media only screen and (max-width:710px){
+
+    .intro{
+        flex-direction: column-reverse;
+        padding: 20px;
+    }
+
+    .intro-text{
+        width: 100%;
+        height: 60vh;
+        text-align: center;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .intro-image{
+        width: 100%;
+        height: 40vh;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
