--- a/style.css
+++ b/style.css
@@ -408,15 +408,79 @@ p {
         text-align: center;
 
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
     }
 
     .intro-image{
         width: 100%;
         height: 50vh;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .intro-image img {
+        max-width: 70%;
+    }
+
+}
+
+/* SEZIONE DUE */
+
+.section2{
+    width: 100vw;
+    height: 100vh;
+    padding: 50px;
+    display: flex;
+}
+
+.section2-text { 
+    width: 50%;
+    height: 100%;
+    text-align: left;
+}
+
+.section2-image { 
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.section2-image img {
+    width: 80%;
+}
+
+/* SEZIONE DUE MOBILE */
+@media only screen and (max-width:710px){
+
+    .section2{
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding: 20px;
+    }
+
+    .section2-text{
+        width: 100%;
+        height: 50%;
+        text-align: center;
+
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .section2-image{
+        width: 100%;
+        height: 50%;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .section2-image img {
+        max-width: 70%;
     }
 
 }
