--- a/style.css
+++ b/style.css
@@ -484,3 +484,117 @@ p {
     }
 
 }
+
+/* SEZIONE 3 */
+
+.section3{
+
+    width: 100VW;
+    height: 100vh;
+    padding: 50px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.section3-text {
+
+    width: 80%;
+    height: auto;
+    text-align: center;
+    
+}
+
+
+.section3-container{
+
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.card {
+
+    width: 270px;
+    padding: 2rem;
+    margin: 4rem;
+    cursor: pointer;
+    /* Neomorfismo*/
+    border-radius: 20px;
+    background: #FFE600;
+    box-shadow:  10px 10px 20px #9B7EDE,
+                 -20px -20px 40px #ffff00;
+    
+
+    /* Glassmorphism
+
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    box-shadow: 0 4px 30px rgb(155, 126, 222, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    */
+}
+
+.card:hover {
+
+    transition: ease-in 0.5s;
+    transform: scale(1.1) rotate(2deg);
+
+}
+
+
+
+.card-image {
+
+    height: 10.62rem;
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 1rem;
+    
+}
+
+.study{
+    background-image: url('img/study.svg');
+}
+
+.work{
+    background-image: url('img/work.svg');
+}
+
+.card p {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1rem;
+
+}
+
+.card a {
+
+    font-family: Ramona;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 21px;
+    text-decoration-line: underline;
+    text-transform: lowercase;
+    color: #000000;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding-top: 1rem;
+    
+}
