--- a/style.css
+++ b/style.css
@@ -505,7 +505,17 @@ p {
     width: 80%;
     height: auto;
     text-align: center;
+    opacity: 0;
+    transition: all 2s;
+    transform: scale(0.1);
+
     
+}
+
+
+.sec3-active{
+    opacity: 1;
+    transform: scale(1);
 }
 
 
@@ -530,8 +540,8 @@ p {
     /* Neomorfismo*/
     border-radius: 20px;
     background: #FFE600;
-    box-shadow:  10px 10px 20px #9B7EDE,
-                 -20px -20px 40px #ffff00;
+    box-shadow:  8px 8px 15px #7662a5,
+                 -20px -20px 40px #3f2775;
     
 
     /* Glassmorphism
