--- a/style.css
+++ b/style.css
@@ -490,9 +490,8 @@ p {
 .section3{
 
     width: 100VW;
-    height: 100vh;
+    height: 100%;
     padding: 50px;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -607,4 +606,17 @@ p {
 
     padding-top: 1rem;
     
+}
+
+@media only screen and (max-width:710px){
+
+    .section3{
+        padding: 20px;
+    }
+
+    .card a {
+        font-size: 18px;
+        line-height: 19px;
+    }
+
 }
