--- a/style.css
+++ b/style.css
@@ -105,25 +105,26 @@ p {
     
 }
 
-/* SVG BLOB CHE SI SPOSTA NELLA HERO */
+/* BLOB CHE SI SPOSTA NELLA HERO */
 .blob {
     position: absolute;
+    fill: #9B7EDE;
+    z-index: -1;
     top: 0;
     left: 0;
-    fill: #9B7EDE;
-    width: 45vw;
-    z-index: 0;
-    animation: move 10s ease-in-out infinite;
+    width: 40vmax;
     transform-origin: 50% 50%;
+    animation: move 10s infinite;
 }
   
 @keyframes move {
-    0%   { transform: scale(1)   translate(10px, -10px); }
-    38%  { transform: scale(0.6, 1) translate(80vw, -20vh) rotate(120deg); }
-    40%  { transform: scale(0.6, 1) translate(80vw, -20vh) rotate(120deg); }
-    78%  { transform: scale(1.3) translate(0vw, 5vh) rotate(-20deg); }
-    80%  { transform: scale(1.3) translate(0vw, 5vh) rotate(-20deg); }
-    100% { transform: scale(1)   translate(10px, -10px); }
+    0%   { transform: scale(1)   translate(10px, -30px); }
+    38%  { transform: scale(0.8, 1) translate(80px, 30px) rotate(160deg); }
+    40%  { transform: scale(0.8, 1) translate(80px, 30px) rotate(160deg); }
+    78%  { transform: scale(1.1) translate(0vw, 40px) rotate(-20deg); }
+    80%  { transform: scale(1.1) translate(0vw, 40px) rotate(-20deg); }
+    100% { transform: scale(1)   translate(10px, -30px); }
+    
 }
 /* BLOB PER IL MOBILE */
 @media screen and (max-width: 420px){
@@ -131,7 +132,6 @@ p {
     .blob {
         width: 90vw;
         animation: move-mobile 10s ease-in-out infinite;
-        
     }
     @keyframes move-mobile {
         0%   { transform: scale(1)   translate(10px, -10px); }
@@ -147,11 +147,11 @@ p {
     
     height: 10vh;
     width: 100%;
-
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    z-index: 1;
     padding: 50px;
 
 }
@@ -162,7 +162,6 @@ p {
     font-size: 20px;
     line-height: 20px;
     cursor: pointer;
-    z-index: 1;
     color: #000000;
 }
 
@@ -227,7 +226,7 @@ p {
 
     .menu-mobile{
         display: block;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
@@ -271,8 +270,7 @@ p {
 
 .hero{
     width: 100%;
-    height: 90vh;
-
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -688,6 +686,27 @@ p {
     }
     .recapiti h4{
         padding: 10px;
+    }
+
+}
+
+/* FRECCIA CHE PORTA IN ALTO LA PAGINA */
+#back-to-top{
+    position: fixed;
+    right: 50px;
+    bottom: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+}
+
+/* FRECCIA BACK TO TOP MOBILE */
+@media only screen and (max-width: 710px){
+
+    #back-to-top{
+        right: 20px;
+        bottom: 100px;
     }
 
 }
