--- a/css/about.css
+++ b/css/about.css
@@ -352,7 +352,7 @@ p {
 
     .hero-text{
 
-        justify-content: flex-start;
+        justify-content:center /*flex-start*/;
         width: 100%;
         height: 50vh;
         text-align: center;
@@ -392,9 +392,70 @@ p {
 
 @media only screen and (max-width:870px){
     .intro{
-        height: auto;
         flex-direction: column;
     }
+    .alert{
+        font-size: 30px;
+    }
+}
+
+/* STUDI */
+.studi{
+    width: 100vw;
+    height: 100vh;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+
+.studi-container{
+
+    border-radius: 20px;
+    background-color: #9B7EDE;
+    height: 90%;
+    width: 90%;
+    padding: 20px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.card{
+    background-color: #FFE600;
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 20px;
+}
+
+.card h3{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    padding: 10px 0;
+}
+
+.card h4{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 19px;
+    padding: 10px 0;
+}
+
+.card p{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 19px;
+    color: black;
+    padding: 10px 0;
 }
 
 
